Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,11 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import json\n",
+    "f = open('nyc_2001_campaign_finance.json')\n",
+    "data = json.load(f)"
    ]
   },
   {
