--- a/index.ipynb
+++ b/index.ipynb
@@ -181,23 +181,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['meta', 'data'])"
+       "list"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "data['.keys()']"
+    "type(data['data'])"
    ]
   },
   {
