--- a/index.ipynb
+++ b/index.ipynb
@@ -640,7 +640,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "d"
    ]
   },
   {
