--- a/index.ipynb
+++ b/index.ipynb
@@ -676,7 +676,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "i[for i in data['meta']['view']['columns']"
+   ]
   },
   {
    "cell_type": "markdown",
