Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -673,11 +673,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sid',\n",
+       " 'id',\n",
+       " 'position',\n",
+       " 'created_at',\n",
+       " 'created_meta',\n",
+       " 'updated_at',\n",
+       " 'updated_meta',\n",
+       " 'meta',\n",
+       " 'ELECTION',\n",
+       " 'CANDID',\n",
+       " 'CANDNAME',\n",
+       " 'OFFICECD',\n",
+       " 'OFFICEBORO',\n",
+       " 'OFFICEDIST',\n",
+       " 'CANCLASS',\n",
+       " 'PRIMARYPAY',\n",
+       " 'GENERALPAY',\n",
+       " 'RUNOFFPAY',\n",
+       " 'TOTALPAY']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "i[for i in data['meta']['view']['columns']"
+    "[i['name'] for i in data['meta']['view']['columns']]"
    ]
   },
   {
